<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textCallRadio"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:id="@+id/imageViewCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image"
                    android:layout_marginTop="16dp"
                    app:srcCompat="@drawable/ic_baseline_call_30"
                    tools:ignore="VectorDrawableCompat"
                    tools:layout_editor_absoluteX="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/optionTextCall"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="3dp"
                    android:paddingRight="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/optionCall"
                    android:textColor="@color/textSecondary"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="43dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:id="@+id/imageViewOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image"
                    tools:ignore="VectorDrawableCompat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/ic_baseline_open_in_new_30" />

                <TextView
                    android:id="@+id/optionTextOpen"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/optionOpen"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="3dp"
                    android:textSize="18sp"
                    android:textColor="@color/textSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" >

                <ImageView
                    android:id="@+id/imageViewCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image"
                    tools:ignore="VectorDrawableCompat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/ic_baseline_content_copy_30" />

                <TextView
                    android:id="@+id/optionTextCopy"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/optionCopy"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="3dp"
                    android:textSize="18sp"
                    android:textColor="@color/textSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" >
                <ImageView
                    android:id="@+id/imageViewMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image"
                    tools:ignore="VectorDrawableCompat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/ic_baseline_message_30" />

                <TextView
                    android:id="@+id/optionTextMessage"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="3dp"
                    android:textSize="18sp"
                    android:text="@string/optionMessage"
                    android:textColor="@color/textSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp" >
                <TextView
                    android:id="@+id/btnCancelOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textCancel"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>